--- a/templates/back/user/edit.html.twig
+++ b/templates/back/user/edit.html.twig
@@ -10,4 +10,5 @@
     <a href="{{ path('user_index') }}">back to list</a>
 
     {{ include('user/_delete_form.html.twig') }}
+    {{ include('user/loop.html.twig') }}
 {% endblock %}
