add elastiquesearch on project + design + change role user

--- a/templates/back/user/index.html.twig
+++ b/templates/back/user/index.html.twig
@@ -35,7 +35,10 @@
                         <h1 class="pad5">Gestion des Utilisateurs</h1>
                         <div class="container90">
                             <div class="row">
-                                
+                                <p class="flow-text">Pour modifier le rôle d'un utilisateur, cliquer sur les icônes correspondant au rôle que vous souhaitez attribuer à celui-ci : </p>
+                                <p><i class="material-icons blue-text text-lighten-4">person</i> Pour le "ROLE_USER" </p>
+                                <p><i class="material-icons teal-text text-lighten-4">person</i> Pour le "ROLE_USER_ADMIN" </p>
+                                <p><i class="material-icons lime-text text-accent-2">person</i> Pour le "ROLE_ADMIN" </p>
                                 <nav class="grey darken-1">
                                   <div class="nav-wrapper container90">
                                     <a href="#!" class="brand-logo">Filtre</a>
